fix: :bug: #36 Fix scroll behavior internal nav on mobile

--- a/src/styles/components/_internal-nav.scss
+++ b/src/styles/components/_internal-nav.scss
@@ -43,10 +43,12 @@
         position: relative;
 
         overflow-x: scroll;
+        scroll-behavior: smooth;
 
         &::-webkit-scrollbar {
             display: none;
         }
+
 
         @media screen and (min-width: 768px) {
             padding-top: 3rem;
